# nanoGPT

./: .gitignore  Softmax1_vs_Softmax0_using_NanoGPT_on_Reddit_Data.ipynb  kurtosis.py  model.py  pyproject.toml  setup.py  step1_install_deps.sh  step2_prepare_reddit_text.sh  step3_train_reddit_softmax1.sh  step3b_train_reddit_softmax0.sh  train.py
config/: train_reddit.py  train_reddit_softmax0.py  train_reddit_softmax1.py
data/reddit/: download_text_blob.py  obtrain_text_convokit.py  prepare.py
