[project]
name = "nanoGPT_softmax1"
version = "0.0.1"
authors = [
  { name="Martin Capodici" },
]
description = "nanoGPT_softmax1"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
    "numpy",
    "transformers",
    "datasets",
    "tiktoken",
    "wandb",
    "tqdm"
]
